added potential investment list

--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -3,11 +3,11 @@
   .sidebar-brand
     %h1 GiraGira
   .list-group.sidebar-nav
-    %a.list-group-item{:href => "#"}
+    %a.list-group-item{:href => potential_investments_url}
       %span.fa-stack.fa-2x
-        %i.fa.fa-circle.fa-stack-2x.fa-blue
-        %i.fa.fa-area-chart.fa-stack-1x.fa-inverse
-      \&nbsp; Dashboard
+        %i.fa.fa-circle.fa-stack-2x.fa-green
+        %i.fa.fa-money.fa-stack-1x.fa-inverse
+      \&nbsp; Potential Investments
     %a.list-group-item{:href => companies_url}
       %span.fa-stack.fa-2x
         %i.fa.fa-circle.fa-stack-2x.fa-yellow
@@ -20,9 +20,9 @@
       \&nbsp; Sectors
     %a.list-group-item{:href => "#"}
       %span.fa-stack.fa-2x
-        %i.fa.fa-circle.fa-stack-2x.fa-green
-        %i.fa.fa-money.fa-stack-1x.fa-inverse
-      \&nbsp; Portfolio
+        %i.fa.fa-circle.fa-stack-2x.fa-blue
+        %i.fa.fa-area-chart.fa-stack-1x.fa-inverse
+      \&nbsp; Dashboard
     %a.list-group-item{:href => "#"}
       %span.fa-stack.fa-2x
         %i.fa.fa-circle.fa-stack-2x.fa-red
