--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -1,5 +1,4 @@
 = link_to 'Back', companies_path
-- kfis = %w[debt_to_equity debt_to_equity_yoy_growth return_on_equity return_on_equity_yoy_growth eps_basic eps_basic_yoy_growth]
 .row
   .col-md-5
     .element-container
@@ -44,11 +43,11 @@
             - @ki.per_year_in_asc_order.each do |year, _|
               %th= year
           %tbody
-            - kfis.each do |kfi|
+            - kfis.each do |kfi, format|
               %tr
                 %td= kfi.to_s
                 - @ki.per_year_in_asc_order.each do |_, stat|
-                  %td= stat[kfi].nil? || !kfi.include?('yoy_growth') ?  number_with_precision(stat[kfi], precision: 4) : number_to_percentage(stat[kfi] * 100, precision: 4)
+                  %td= format.call(stat[kfi])
 .row.financial-statements
   .col-md-12
     .element-container
