reinstall to new laptop + some improvements

--- a/app/views/potential_investments/index.html.haml
+++ b/app/views/potential_investments/index.html.haml
@@ -18,16 +18,15 @@
               %th EPS annual ror (10y)
               %th Current Price
               %th Nr past FS
-              %th
 
           %tbody
 
             - @potential_investments.each do |pi|
               %tr
                 %td= pi.company.symbol
-                %td= pi.company.name.html_safe
-                %td= pi.company.sector_name
-                %td= pi.company.industry_name
+                %td= link_to pi.company.name.html_safe, pi.company
+                %td= link_to pi.company.sector_name, pi.company.sector
+                %td= link_to pi.company.industry_name, pi.company.industry
                 %td= pi.year
                 %td= number_to_percentage(pi.roe_5y_annual_compounding_ror * 100, precision: 2)
                 %td= number_to_percentage(pi.roe_10y_annual_compounding_ror * 100, precision: 2)
@@ -35,7 +34,6 @@
                 %td= number_to_percentage([pi.eps_10y_annual_compounding_ror, 1000].min * 100, precision: 2)
                 %td= number_with_precision(pi.current_price, precision: 2)
                 %td= number_with_precision(pi.n_past_financial_statements, precision: 0)
-                %td= link_to 'Show', pi.company
 
         .alert.alert-info(role="alert")
           %strong Notice
@@ -46,4 +44,3 @@
         .alert.alert-info(role="alert")
           %strong Selector Criteria
           %p= Financials::BasicSelector.new.to_html.html_safe
-
