watchlist + whenever for cron jobs

--- a/app/assets/stylesheets/potential_investments.scss
+++ b/app/assets/stylesheets/potential_investments.scss
@@ -9,6 +9,9 @@
       min-width:120px;
     }
     text-align:right;
+    .btn-primary span{
+      color: white;
+    }
   }
   dl {
     width: 600px;
