--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -8,6 +8,11 @@
         %i.fa.fa-circle.fa-stack-2x.fa-green
         %i.fa.fa-money.fa-stack-1x.fa-inverse
       \&nbsp; Potential Investments
+    %a.list-group-item{:href => watchlists_url}
+      %span.fa-stack.fa-2x
+        %i.fa.fa-circle.fa-stack-2x.fa-blue-green
+        %i.fa.fa-search-plus.fa-stack-1x.fa-inverse
+      \&nbsp; Watchlist
     %a.list-group-item{:href => companies_url}
       %span.fa-stack.fa-2x
         %i.fa.fa-circle.fa-stack-2x.fa-yellow
@@ -23,10 +28,5 @@
         %i.fa.fa-circle.fa-stack-2x.fa-blue
         %i.fa.fa-area-chart.fa-stack-1x.fa-inverse
       \&nbsp; Dashboard
-    %a.list-group-item{:href => "#"}
-      %span.fa-stack.fa-2x
-        %i.fa.fa-circle.fa-stack-2x.fa-red
-        %i.fa.fa-newspaper-o.fa-stack-1x.fa-inverse
-      \&nbsp; News
   .mascot= image_tag('raccoon', :alt => 'raccoon')
 / #sidebar-wrapper
