fix stock row importer + improve financials tables on company page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require bootstrap
  *= require bootstrap-table.min
  *= require bootstrap-table-sticky-header
+ *= require bootstrap-table-fixed-columns
  *= require sidebar
  *= require colors
  *= require font-awesome
