--- a/app/assets/stylesheets/potential_investments.scss
+++ b/app/assets/stylesheets/potential_investments.scss
@@ -1,12 +1,17 @@
 .potential-investments {
+  .content {
+    padding: 10px 5px 10px 5px;
+  }
   .small {
-    font-size: 10px;
+    font-size: 8px;
   }
   .table {
+    table-layout: auto;
     overflow:scroll;
-    min-width: 2600px;
+    min-width: 1310px;
+    font-size: 10px;
     td {
-      min-width:120px;
+      //min-width:100px;
     }
     text-align:right;
     .btn-primary span{
@@ -14,10 +19,10 @@
     }
   }
   dl {
-    width: 600px;
+    //width: 600px;
     background: lightgoldenrodyellow;
     border: 1px solid #000;
-    padding: 5px 15px;
+    //padding: 5px 15px;
   }
 
 }
