only show yearly statements on company page

--- a/app/views/companies/_balance_sheet.html.haml
+++ b/app/views/companies/_balance_sheet.html.haml
@@ -1,4 +1,4 @@
-- balance_sheets = company.balance_sheets.sort_by(&:year)
+- balance_sheets = company.balance_sheets.yearly.sort_by(&:year)
 
 %table.table
   %tr
