--- a/app/views/companies/_income_statement.html.haml
+++ b/app/views/companies/_income_statement.html.haml
@@ -1,4 +1,4 @@
-- income_statements = company.income_statements.sort_by(&:year)
+- income_statements = company.income_statements.yearly.sort_by(&:year)
 %table.table
   %tr
     %th.headcol.first
